--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -38,21 +38,21 @@
   line-height: 1;
   margin-bottom: 2rem;
   /* Preferred size */
-  font-size: 32.5rem;
+  font-size: 31vw;
   /* Hide initially */
   opacity: 0;
   transition: opacity 0.3s ease;
 
-  @media (max-width: 768px) {
-    font-size: clamp(6rem, 20vw, 32.5rem);
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
-  }
+  // @media (max-width: 768px) {
+  //   font-size: clamp(6rem, 20vw, 32.5rem);
+  //   margin-top: 1rem;
+  //   margin-bottom: 1.5rem;
+  // }
 
-  @media (max-width: 480px) {
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
-  }
+  // @media (max-width: 480px) {
+  //   margin-top: 0.5rem;
+  //   margin-bottom: 1rem;
+  // }
 }
 
 .description {
@@ -63,15 +63,15 @@
   margin: 0;
   text-align: left;
   /* Preferred font size */
-  font-size: 2rem;
+  font-size: 1.5vw;
   /* Hide initially */
   opacity: 0;
   transition: opacity 0.3s ease;
 
-  @media (max-width: 768px) {
-    font-size: clamp(1.25rem, 1.5vw + 0.5rem, 2rem);
-    line-height: 1.5;
-  }
+  // @media (max-width: 768px) {
+  //   font-size: clamp(1.25rem, 1.5vw + 0.5rem, 2rem);
+  //   line-height: 1.5;
+  // }
 }
 
 .footer {
