removed projects and custom cursor

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -92,3 +92,12 @@
     margin-top: 1rem;
   }
 }
+
+.title {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  cursor: default;
+  pointer-events: none;
+}
